# liminal-salt

./: .gitignore  AGREEMENT.md  ARCHITECTURE_ROADMAP.md  AUDIT-FIXES.md  CHANGELOG.md  CLAUDE.md  CONTRAST.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit_thread_memory_roleplay.md  config_manager.py  context_manager.py  manage.py  package-lock.json  package.json  planning_thread_memory_roleplay.md  requirements.txt  run.py  webapp.py
crates/liminal-salt/: Cargo.toml
crates/liminal-salt/default_prompts/: persona_memory_merge.md  persona_memory_modify.md  persona_memory_seed.md  thread_memory_merge_chatbot.md  thread_memory_merge_roleplay.md
crates/liminal-salt/src/: assets.rs  lib.rs  main.rs  routes.rs  tera_extra.rs
crates/liminal-salt/src/handlers/: api.rs  chat.rs  context.rs  memory.rs  mod.rs  persona.rs  prompts.rs  session.rs  settings.rs  setup.rs  status.rs  stubs.rs  thread_memory.rs
crates/liminal-salt/src/middleware/: app_ready.rs  csrf.rs  mod.rs  session_state.rs
crates/liminal-salt/src/services/: chat.rs  config.rs  context_files.rs  fs.rs  llm.rs  local_context.rs  memory.rs  memory_worker.rs  mod.rs  openrouter.rs  persona.rs  prompt.rs  prompts.rs  session.rs  summarizer.rs  themes.rs  thread_memory.rs
crates/liminal-salt/static/css/: output.css
crates/liminal-salt/static/js/: components.js  utils.js
crates/liminal-salt/static/themes/: liminal-salt.json
crates/liminal-salt/templates/: base.html  hello.html  icons.html
crates/liminal-salt/templates/chat/: assistant_fragment.html  chat.html  chat_home.html  chat_main.html  context_files_modal.html  dir_browser_modal.html  local_dir_tab.html  (+2 more)
crates/liminal-salt/tests/: chat_core.rs  context_files.rs  memory_service.rs  memory_worker.rs  persona.rs  prompt_assembly.rs  prompts.rs  session.rs  template_render.rs  thread_memory_service.rs
(+139 files in other folders)
