[package]
name = "liminal-salt"
version = "0.20.4"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "liminal-salt"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
regex = "1"
tower-sessions = { version = "0.15", features = ["memory-store"] }
rand = "0.10"
chrono-tz = "0.10"
form_urlencoded = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
